--- a/src/Components/mainContent.css
+++ b/src/Components/mainContent.css
@@ -80,7 +80,7 @@
     cursor: pointer;
 }
 
-.headerAvatar:hover{
+.headerAvatar:hover {
     border: 2px solid rgb(216, 40, 40);
 }
 
@@ -163,6 +163,11 @@
     box-shadow: 2px 3px 10px #000;
 }
 
+.chatListItem:hover {
+    background-color: #000 !important;
+    transform: rotateY(10deg);
+}
+
 .chatListCard {
     margin-left: 1rem;
     display: flex;
@@ -212,7 +217,7 @@
     resize: both;
     position: relative;
     max-width: 5000px;
-    height:88%;
+    height: 88%;
     margin-left: 2rem;
     margin-top: 1rem;
     border-radius: 5px;
@@ -230,7 +235,7 @@
     align-items: center;
 }
 
-.ChatroomDetailHeader img{
+.ChatroomDetailHeader img {
     width: 2.6rem;
     height: 2.6rem;
     object-fit: contain;
@@ -239,7 +244,7 @@
     margin-left: 2rem;
 }
 
-.ChatroomDetailHeader h2{
+.ChatroomDetailHeader h2 {
     color: #fff;
     margin-left: 1rem;
 }
@@ -258,7 +263,7 @@
     border: 1px solid rgb(163, 162, 162);
     border-radius: 50%;
     object-fit: cover;
-    
+
 }
 
 .ChatroomMsgList {
@@ -273,7 +278,7 @@
     padding: 30rem 0 5rem 0;
 }
 
-.ChatroomMsgList::-webkit-scrollbar-thumb{
+.ChatroomMsgList::-webkit-scrollbar-thumb {
     background-color: #3a3939;
     border-radius: 35px;
 }
@@ -308,7 +313,7 @@ ul, li {
     margin-right: 1rem;
 }
 
-.targetUserMsgContent{
+.targetUserMsgContent {
     height: auto;
     overflow: hidden;
     word-wrap: break-word;
@@ -320,7 +325,7 @@ ul, li {
     box-shadow: 1px 0 5px #000;
 }
 
-.currentUserMsgContent{
+.currentUserMsgContent {
     height: auto;
     overflow: hidden;
     word-wrap: break-word;
@@ -332,7 +337,7 @@ ul, li {
     box-shadow: -1px 0 15px #000;
 }
 
-.ChatroomDetailFooter{
+.ChatroomDetailFooter {
     background-color: #000;
     width: 100%;
     height: 5rem;
@@ -344,7 +349,12 @@ ul, li {
     align-items: center;
 }
 
-.chatroomDetailFooterInput{
+.ChatRoomDetailFooterIcon:hover {
+    cursor: pointer;
+    color: #cb9c44 !important;
+}
+
+.chatroomDetailFooterInput {
     width: 70%;
     height: 2rem;
     border: 1px solid #fff;
@@ -355,13 +365,13 @@ ul, li {
 
 }
 
-.ChatroomDetailFooterBtn{
+.ChatroomDetailFooterBtn {
     width: 5rem;
     height: 2rem;
     margin: 0 5%;
     background-color: #ff5564;
 }
 
-.ChatroomDetailFooterBtn:hover{
+.ChatroomDetailFooterBtn:hover {
     background-color: #cb9c44;
 }
