--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -12,17 +13,18 @@ body {
   transition: all 0.25s !important;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: .5rem;
   color: #000;
   background-color: rgba(0, 0, 0, 0);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
   border-radius: 15px;
   background-color: rgb(92, 49, 20);
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -100,4 +102,3 @@ input {
   min-height: 100vh;
   margin: 0;
 }
-
