--- a/src/Components/mainContent.css
+++ b/src/Components/mainContent.css
@@ -211,6 +211,12 @@
     overflow: hidden;
 }
 
+.ChatroomMsg {
+    color: gray;
+    margin: 25rem auto;
+    text-align: center;
+}
+
 .ChatroomDetailContainer {
     width: 75%;
     overflow: hidden;
@@ -228,7 +234,7 @@
 .ChatroomDetailHeader {
     background-color: #000;
     width: 100%;
-    height: 6%;
+    height: 8%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -264,6 +270,30 @@
     border-radius: 50%;
     object-fit: cover;
 
+}
+
+.chatroomLeftArrow {
+    border-width: 15px 15px 15px 0px;
+    transform: rotateZ(45deg);
+    border-style: solid;
+    position: absolute;
+    border-color: transparent transparent black transparent;
+    width: 0;
+    height: 0;
+    left: 3.6rem;
+    top: 0.8rem;
+}
+
+.chatroomRightArrow {
+    border-width: 15px 15px 15px 0px;
+    border-style: solid;
+    border-color: transparent transparent rgb(18, 150, 106) transparent;
+    width: 0;
+    height: 0;
+    transform: rotateZ(-130deg);
+    position: absolute;
+    right: 3.7rem;
+    top: 38%;
 }
 
 .ChatroomMsgList {
@@ -303,6 +333,7 @@ ul, li {
     flex-direction: row;
     align-items: center;
     color: #fff;
+    position: relative;
 }
 
 .currentUserMsgContainer {
@@ -311,6 +342,7 @@ ul, li {
     align-items: center;
     color: #fff;
     margin-right: 1rem;
+    position: relative;
 }
 
 .targetUserMsgContent {
